# mg

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  Dockerfile  Makecore.am  Makefile.am  README.md  appveyor.yml  bootstrap  boxupload.sh  configure.ac  info.txt  mg.gyp  mg.gypi  mg.msbuild.proj  version.py  web.config
docs/: .gitignore  Gemfile  README.md  _config.yml  download.md  index.html  index.md  page1.md  sitemap.xml  test.sh
docs/_site/: index.html  page1.html
docs/_site/content/: Build.html  Encode.html  Package.html
docs/content/: Build.md  Encode.md  Package.md  Play.md  Serve.md
docs/style/: main.scss
src/: Makefile.am  mgcore.h  mgmedia.h
src/b64/: Makefile.am  b64.gyp
src/b64/include/: cdecode.h  cencode.h
src/b64/src/: cdecode.cpp  cencode.cpp
src/mg/: alxstring.h  cbuffer.h  cmdline.h  cresource.h  exception.h  promises.h  splitter.h
src/mg/core/: Makefile.am  bitstream.cpp  bitstream.h  char.h  core.gyp  core.h  ctime.h  file.cpp  file.h  thread.cpp  thread.h  util.h  uvbase.cpp  uvbase.h
src/mg/core/nx/: console_color.h  ctime.cpp  nx-util.h  util.cpp
src/mg/core/win/: console_color.h  ctime.cpp  util.cpp  win-util.h
src/mg/media/: .gitignore  MOOFReader.h  Makefile.am  MediaJoin.h  TBitstream.h  WaveParser.h  WinCrc.cpp  aac_time_fix.h  fixed_queue.h  h264nal.h  hls_renderer.h  hnano.h  media.gyp  media_parser.h  media_queue.h  mp4dynamic.cpp  mp4dynamic.h  mp4dynamicinfo.cpp  mp4dynamicinfo.h  mp4edit.cpp  mp4edit.h  mp4fragmented.h  mp4mux.h  mp4parse.h  mp4write.h  mpd_renderer.h  mpeg.h  stdafx.h  ts.h  tsinfo.cpp  tsinfo.h  tsmux.h  tsparse.h  tswrite.h  wincrc.cpp  wincrc.h
src/mg/media/mp4/: aac.fl  cenc.fl  h264.fl  ltcextension.fl  mp4.fl  mp4_fragments.fl  mp4i_ext.fl  mpeg2au.fl  mpeg2ts.fl  mpeg4_odf.fl
src/mgcli/: Makefile.am  auto_test.h  cenc_provider.h  fragment_validation.h  mgcli.gyp  mp4info.cpp  stdafx.h  version.h
test/: Makefile.am  PERFORMANCE.PS1  boxupload.sh  compile-gyp.ps1  mgtest.gyp  mgtest.ps1  open-vs.ps1  test.cpp  test_appveyor.py  test_base.h  test_bitstream.cpp  test_bitstream.h  test_buffer.cpp  test_core.py  test_dash.py  test_hash.py  test_hls.py  test_mg.py  test_mp4_parse.cpp  test_mp4_parse.h  test_multiple_bitrate.py  test_resource.cpp  test_resource.h  test_thread.cpp  test_thread.h  test_util.cpp  test_util.h  test_uv.cpp  test_uv.h  test_wine.py
test/test_assets/: MEDIA1.MP4.pick.txt  dash_small.txt  hls_full.txt  hls_small.txt  join.txt  multibitrate.txt  new_dash_small.txt  new_widevine_small.txt
